project(InferenceTests)

add_library(${PROJECT_NAME} INTERFACE)

target_sources(${PROJECT_NAME} INTERFACE
    ${CMAKE_CURRENT_SOURCE_DIR}/AddVectorToMatrixColumnsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/AddVectorToMatrixRowsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BitSetBinarizationTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Blob3dConvolutionTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Blob3dMaxPoolingTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Blob3dMeanPoolingTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobChannelwiseConvolutionTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobConvolutionTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobGetSubSequenceTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobGlobalMaxOverTimePoolingTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobGlobalMaxPoolingTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobMaxOverTimePoolingTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobMaxPoolingTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobMeanPoolingTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobMergeByDimTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobResizeImageTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobRleConvolutionTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobSplitByDimTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/BlobTimeConvolutionTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/DropoutTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/EnumBinarizationTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FindMaxValueInColumnsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/FindMaxValueInRowsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/LookupAndSumTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MatrixSpreadRowsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MatrixSpreadRowsAddTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MultiplyDiagMatrixByMatrixAndAddTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MultiplyDiagMatrixByMatrixTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/MultiplyMatrixByTransposedMatrixTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/ReorgTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SetVectorToMatrixElementsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SetVectorToMatrixRowsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SumMatrixRowsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/SumMatrixColumnsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/Upsampling2DForwardTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorAbsDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorAbsTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorAddTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorAddValueTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorBernulliKLDerivativeTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorDotProductTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorEltwiseDivideTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorEltwiseLogSumExpTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorEltwiseMaxTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorEltwiseMinTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorEltwiseMultiplyTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorEltwisePowerTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorELUDiffOpTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorELUDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorELUTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorEqualTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorEqualValueTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorExpTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorFillBernoulliTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorFillTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorFindMaxValueInSet.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHardSigmoidDiffOpTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHardSigmoidDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHardSigmoidTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHardTanhDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHardTanhTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHingeDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHingeTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHSwishDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHSwishTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorHuberTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorInvTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorL1DiffAddTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorLeakyReLUDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorLeakyReLUTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorLogTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorMinMaxTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorMultichannelLookupAndCopyTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorMultiplyAndAddTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorMultiplyTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorNegLogTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorPowerDiffOpTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorPowerDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorPowerTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorReLUDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorReLUTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorSigmoidDiffOpTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorSigmoidDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorSigmoidTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorSqrtTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorSubTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorSumTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorTanhDiffOpTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorTanhDiffTest.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/VectorTanhTest.cpp
)

target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})